<resources>
    <string name="app_name">Aplikasi E-Learning \nBahasa Daerah Kelas VII</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="or">atau</string>
    <string name="register">Registrasi</string>
    <string name="name">Nama</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="old_password">Kata sandi lama</string>
    <string name="new_password">Kata sandi baru</string>
    <string name="confirm_new_password">Konfirmasi kata sandi baru</string>
    <string name="user">Pengguna</string>
    <string name="user_profile">Profil Pengguna</string>
    <string name="default_text">-</string>
    <string name="app_bar_materi">Materi Pelajaran</string>
    <string name="logout">Keluar</string>
    <string name="welcome_home">ᨕᨁ ᨀᨑᨙᨅ?</string>
    <string name="tag_line">Kurangi main game 🎮🎮, saatnya gadget untuk inovasi pembelajaran</string>
    <string name="search">Cari. . .</string>
    <string name="your_materials">Materi</string>
    <string name="please_field_your_email">Harap cantumkan email anda</string>
    <string name="please_use_valid_email">Harap gunakan email yang valid</string>
    <string name="please_field_your_password">Silahkan masukkan kata sandi anda</string>
    <string name="please_wait">Harap Tunggu....</string>
    <string name="success">Yayy!!</string>
    <string name="error">Oops. . .</string>
    <string name="please_field_your_name">Harap masukkan nama anda</string>
    <string name="please_field_your_confirm_password">Harap masukkan konfirmasi kata sandi anda</string>
    <string name="please_field_your_password_more_than_8">Harap masukkan kata sandi anda lebih dari 8 karakter</string>
    <string name="please_field_your_confirm_password_more_than_8">Harap masukkan konfrimasi kata sandi ada lebih dari 8 katakter</string>
    <string name="your_password_didnt_match">Kata sandi anda tidak cocok</string>
    <string name="please_field_your_old_password">Harap masukkan kata sandi lama anda</string>
    <string name="please_input_your_old_password_more_than_8">Harap masukkan kata sandi lama anda lebih dari 8 karakter</string>
    <string name="please_field_your_new_password">Harap masukkan kata sandi baru anda</string>
    <string name="please_input_your_new_password_more_than_8">Harap masukkan kata sandi baru anda lebih dari 8 karakter</string>
    <string name="please_field_your_confirm_new_password">Harap masukkan konfirmasi kata sandi baru anda</string>
    <string name="please_input_your_confirm_new_password_more_than_8">Harap masukkan konfirmasi kata sandi baru anda lebih dari 8 karakter</string>
    <string name="error_login">Terjadi kesalahan, harap coba lagi</string>
    <string name="success_change_pass">Selamat🎉🎉 \nPassword kamu sudah diubah😉😉</string>
    <string name="success_register">Selamat🎉🎉, registrasi berhasil. \nAkun kamu sudah teregistrasi</string>
    <string name="success_forgot_pass">Selamat🎉🎉 \nlink reset password telah dikirim ke email kamu. \n please check it!</string>
    <string name="aksara_lontara">Aksara Lontara</string>
    <string name="see_more">Selengkapnya</string>
    <string name="app_bar_aksara">Aksara Lontara</string>
    <string name="kuis">Kuis</string>
    <string name="akses_materi">Akses materi jadi lebih mudah!</string>
    <string name="silahkan_login">Silahkan login dengan akun kamu untuk masuk ke dalam aplikasi</string>
    <string name="silahkan_signup">Silahkan registrasi terlebih dahulu untuk membuat akun</string>
    <string name="translate">Terjemahkan</string>
    <string name="enter_text">Masukkan teks Aksara Lontara</string>
    <string name="option1">ᨀ</string>
    <string name="option2">ᨁ</string>
    <string name="option3">ᨂ</string>
    <string name="option4">ᨃ</string>
    <string name="score">Hasil Kuis</string>
    <string name="your_score">Nilai kamu :</string>
    <string name="correct">Benar</string>
    <string name="wrong">Salah</string>
    <string name="aksara_latin">Aksara Latin</string>
    <string name="arti">Terjemahan</string>
    <string name="translate_here">Terjemahkan \ndisini👇👇</string>
    <string name="materi">ᨕᨄᨚᨂᨛᨊ ᨖᨘᨑᨘᨄᨘ ᨒᨚᨈᨑ</string>
    <string name="aturan">*Maksimal kata yang boleh diterjemahkan yaitu sampai tanda ᨞ dalam buku pelajaran</string>
    <string name="hasil_terjemahan_latin">Hasil Terjemahan Aksara Latin</string>
    <string name="hasil_terjemahan_arti">Hasil Terjemahan Arti</string>
    <string name="kirim">kirim</string>
    <string name="pesan_lupa_password">Masukkan email kamu. Kamu akan menerima link untuk membuat kata sandi baru</string>
    <string name="pesan_translate">Ada yang bisa saya terjemahkan untuk anda hari ini?</string>
    <string name="terjemahan">Penerjemahan</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="list_question">List Pertanyaan</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="titik_dua">:</string>
    <string name="registrasi">Registrasi</string>
</resources>