<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_100"
        android:background="#DEEFEE">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/hello" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/akses_materi"
            android:textColor="@color/black"
            android:textSize="@dimen/body_1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/silahkan_login"
            android:textColor="@color/bg"
            android:textSize="@dimen/body_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/normal_100"
            android:layout_marginRight="@dimen/normal_100"
            android:layout_marginLeft="@dimen/normal_100"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:backgroundTint="@color/bg_muda"
                android:fontFamily="@font/poppins"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/normal_100"
                android:paddingEnd="@dimen/normal_100"
                android:textSize="@dimen/body_2"
                android:textColor="@color/bg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            android:layout_marginTop="@dimen/normal_100">

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit_text"
                android:backgroundTint="@color/bg_muda"
                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/normal_100"
                android:paddingEnd="@dimen/normal_100"
                android:layout_marginRight="@dimen/normal_100"
                android:layout_marginLeft="@dimen/normal_100"
                android:textSize="@dimen/body_2"
                android:textColor="@color/bg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot_pass_login"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/normal_100"
            android:layout_marginRight="@dimen/normal_100"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/forgot_password"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            android:layout_marginRight="@dimen/normal_100"
            android:layout_marginLeft="@dimen/normal_100"
            android:background="@drawable/bg_btn_auth_color_primary"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/normal_100"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            android:layout_marginRight="@dimen/normal_100"
            android:layout_marginLeft="@dimen/normal_100"
            android:background="@drawable/bg_btn_auth_color_white"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register"
            android:textColor="@color/bg" />
    </LinearLayout>

</ScrollView>