<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEEFEE"
    tools:context=".presentation.penerjemah.PenerjemahActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_all_kuis"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginEnd="@dimen/normal_100"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_back_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_100"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/tv_title_kuis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.2"
                    android:maxLines="1"
                    android:text="@string/terjemahan"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/body_1"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/toolbar"
            layout="@layout/top_translate"/>

        <View
            android:id="@+id/viewBackgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_course_home_height"
            android:layout_marginStart="@dimen/normal_125"
            android:layout_marginTop="@dimen/normal_125"
            android:layout_marginEnd="@dimen/normal_125"
            android:padding="@dimen/small_50"
            app:hintEnabled="false"
            android:background="@color/bg_muda"
            app:boxBackgroundMode="none"
            android:elevation="@dimen/normal_100">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lontara"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_text"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/bg"
                android:textSize="@dimen/h6"
                android:gravity="top"
                android:background="@drawable/bg_translate"
                android:textColorHint="#00796B" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_translate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/normal_100"
            android:text="@string/translate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_1"
            app:backgroundTint="@color/bg" />

        <TextView
            android:id="@+id/text_view_aksara_latin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_100"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/aksara_latin"
            android:textColor="@color/bg"
            android:textSize="@dimen/subtitle_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_translate" />

        <TextView
            android:id="@+id/output_latin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_125"
            android:layout_marginTop="@dimen/normal_75"
            android:layout_marginEnd="@dimen/normal_125"
            android:background="@drawable/bg_translate"
            android:elevation="@dimen/small_50"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:padding="@dimen/subtitle_1"
            android:text="@string/hasil_terjemahan_latin"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:textColor="@color/bg"
            android:textSize="@dimen/subtitle_1" />

        <TextView
            android:id="@+id/text_view_arti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_100"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="@dimen/normal_100"
            android:text="@string/arti"
            android:textColor="@color/bg"
            android:textSize="@dimen/subtitle_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_translate" />

        <TextView
            android:id="@+id/output_arti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_125"
            android:layout_marginTop="@dimen/normal_75"
            android:layout_marginEnd="@dimen/normal_125"
            android:background="@drawable/bg_translate"
            android:elevation="@dimen/small_50"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:padding="@dimen/subtitle_1"
            android:text="@string/hasil_terjemahan_arti"
            android:textAlignment="center"
            android:textColor="@color/bg"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/subtitle_1"
            android:layout_marginBottom="@dimen/normal_100"/>
    </LinearLayout>

</ScrollView>