<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.RegisterActivity"
    android:background="#DEEFEE">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/small_100"
            android:layout_marginEnd="@dimen/normal_100"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_close_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_100"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_title_kuis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.2"
                android:maxLines="1"
                android:text="@string/registrasi"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/appbar_register"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/normal_100">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/hay" />

            <TextView
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/akses_materi"
                android:textColor="@color/black"
                android:textSize="@dimen/body_1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/silahkan_signup"
                android:textColor="@color/bg"
                android:textSize="@dimen/body_2" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:backgroundTint="@color/bg_muda"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="@dimen/normal_100"
                    android:paddingEnd="@dimen/normal_100"
                    android:textSize="@dimen/body_2"
                    android:textColor="@color/bg"
                    android:fontFamily="@font/poppins"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/email"
                    android:backgroundTint="@color/bg_muda"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/normal_100"
                    android:paddingEnd="@dimen/normal_100"
                    android:textSize="@dimen/body_2"
                    android:textColor="@color/bg"
                    android:fontFamily="@font/poppins"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:backgroundTint="@color/bg_muda"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/normal_100"
                    android:paddingEnd="@dimen/normal_100"
                    android:textSize="@dimen/body_2"
                    android:textColor="@color/bg"
                    android:fontFamily="@font/poppins"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                android:layout_marginTop="@dimen/normal_100">

                <EditText
                    android:id="@+id/et_confirm_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:backgroundTint="@color/bg_muda"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/normal_100"
                    android:paddingEnd="@dimen/normal_100"
                    android:textSize="@dimen/body_2"
                    android:textColor="@color/bg"
                    android:fontFamily="@font/poppins"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn_auth_color_primary"
                android:layout_marginStart="@dimen/small_50"
                android:layout_marginEnd="@dimen/small_50"
                android:layout_marginTop="@dimen/normal_175"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>