<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar_main"
                android:layout_width="@dimen/image_user_profile_normal"
                android:layout_height="@dimen/image_user_profile_normal"
                android:src="@android:color/darker_gray"
                android:layout_margin="@dimen/normal_100"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/text_view_welcome_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_home"
                android:layout_marginStart="@dimen/normal_100"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@+id/tv_name_user_main"
                app:layout_constraintStart_toEndOf="@+id/iv_avatar_main"
                app:layout_constraintTop_toTopOf="@+id/iv_avatar_main"/>

            <TextView
                android:id="@+id/tv_name_user_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textSize="@dimen/subtitle_1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginEnd="@dimen/normal_100"
                tools:text="Kamtina Musyfirah"
                app:layout_constraintStart_toStartOf="@+id/text_view_welcome_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/iv_avatar_main"
                app:layout_constraintTop_toBottomOf="@+id/text_view_welcome_home"/>

            <TextView
                android:id="@+id/text_view_tag_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_line"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/h5"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/normal_150"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginEnd="@dimen/normal_100"
                app:layout_constraintTop_toBottomOf="@+id/iv_avatar_main"/>

            <EditText
                android:id="@+id/et_search_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_search_height"
                android:layout_marginTop="@dimen/large_125"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginEnd="@dimen/normal_100"
                android:background="@drawable/bg_edit_text_search"
                android:elevation="@dimen/small_50"
                android:drawableEnd="@drawable/ic_baseline_search_24"
                android:drawableTint="@android:color/darker_gray"
                android:paddingStart="@dimen/normal_100"
                android:paddingEnd="@dimen/normal_100"
                android:hint="@string/search"
                android:inputType="text"
                android:imeOptions="actionSearch"
                app:layout_constraintTop_toBottomOf="@+id/text_view_tag_line"/>

            <TextView
                android:id="@+id/text_view_your_materials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_materials"
                android:textSize="@dimen/h6"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/normal_100"
                android:layout_marginTop="@dimen/large_100"
                app:layout_constraintTop_toBottomOf="@+id/et_search_main"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_materials_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_50"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="@dimen/small_100"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/text_view_your_materials"
                tools:listitem="@layout/item_material" />

            <ImageView
                android:id="@+id/iv_empty_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_no_data"
                android:layout_marginTop="@dimen/normal_100"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/text_view_tag_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <FrameLayout
                android:id="@+id/frame_bottom_navigation"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_nav_menu"
                android:background="@android:color/transparent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>